<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PostStoryFragment">

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/desc_template_img_post"
        app:layout_constraintBottom_toTopOf="@+id/ll_pick_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        app:srcCompat="@drawable/template_img" />

    <LinearLayout
        android:id="@+id/ll_pick_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView">

        <Button
            android:id="@+id/bt_camera"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/camera"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/bt_gallery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/gallery"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/desc_post_img"
        android:scrollbars="vertical"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/ll_pick_picture">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            tools:ignore="KeyboardInaccessibleWidget" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_pick_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="@+id/TIL_description"
        app:layout_constraintTop_toBottomOf="@+id/TIL_description" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/no_location_selected"
        app:layout_constraintStart_toStartOf="@+id/tv_pick_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_pick_location" />

    <TextView
        android:id="@+id/text_btn_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:text="@string/change"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/TIL_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_pick_location" />

    <Button
        android:id="@+id/bt_upload"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="8dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <ProgressBar
        android:id="@+id/pb_post"
        style="?android:attr/progressBarStyle"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginBottom="12dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_pick_picture"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/loading_data"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_post" />


</androidx.constraintlayout.widget.ConstraintLayout>